--- a/src/components/ZpEllipsis/foundation/index.less
+++ b/src/components/ZpEllipsis/foundation/index.less
@@ -1,17 +1,17 @@
-@xc-prefix: zp;
+@import '../../../styles/override.less';
 
-.@{xc-prefix}-ellpsis-wrapper{
+.@{zp-prefix}-ellpsis-wrapper{
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: justify;
 }
 
-.@{xc-prefix}-ellpsis-single{
+.@{zp-prefix}-ellpsis-single{
   display: block;
   white-space: nowrap;
 }
 
-.@{xc-prefix}-ellpsis-mutil{
+.@{zp-prefix}-ellpsis-mutil{
   display: -webkit-box;
 	-webkit-box-orient: vertical;
 }
