fix: 优化 ZpDebounceButton

--- a/src/components/ZpDebounceButton/foundation/index.less
+++ b/src/components/ZpDebounceButton/foundation/index.less
@@ -1,5 +1,6 @@
-@import '../../../styles/override.less';
+// @import '../../../styles/override.less';
+@zp-prefix: zp;
 
 .@{zp-prefix}-zp-debounce-button{
-  border: 1px solid #000;
+  border-bottom: 1px solid #f1f1f1;
 }
