fix: 优化 useDomSizeChange & ZpViewText

--- a/src/components/ZpViewText/foundation/index.less
+++ b/src/components/ZpViewText/foundation/index.less
@@ -13,11 +13,12 @@
       .@{zp-prefix}-text-view-main-more {
         float: right;
         clear: both;
-        // color: var(--xc-primary-color);
+        color: #1890ff;
         cursor: pointer;
         margin-left: 8px;
         .@{zp-prefix}-text-view-main-more-btn {
           padding: 0 4px;
+          height: auto;
         }
         .@{zp-prefix}-text-view-main-more-icon {
           transform: rotateZ(180deg);
